# regdesc

./: .gitignore  .pre-commit-config.yaml  README.md  README.org  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
regdesc/: __init__.py  register.py  utils.py
regdesc/codegen/: ir.py  rust_dummy_pac.py  template.py
regdesc/codegen/templates/: artiq_c_like.tpl.py  cmsis.tpl.svd
regdesc/devices/: ad5781.py  ad9910.py  adf4002.py  adf4360_8.py  adf5356.py  device.py  trf372017.py
regdesc/tests/: test_ad5781.py  test_ad9910.py  test_adf4002.py  test_adf4360_8.py  test_adf5356.py  test_device.py  test_register.py  test_trf372017.py
regdesc/tests/codegen/: test_ir.py
