[project]
name = "regdesc"
version = "0.1.0"
description = "Pythonic hardware register descriptors."
license = "GPL-3.0"
authors = [
    { name = "Etienne Wodey", email = "airwoodix@posteo.me" }
]
dependencies = [
  "jinja2>=1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
regdesc-serialize = "regdesc.codegen.ir:ep_emit_json"
regdesc-codegen = "regdesc.codegen.template:ep_codegen"
regdesc-gen-rs-pac = "regdesc.codegen.rust_dummy_pac:ep_rust_dummy_pac"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pyproject-fmt>=1.7.0",
    "ruff>=0.3.3",
]

[tool.ruff]
line-length = 100
target-version = 'py38'
extend-exclude = [
  "*.tpl.py",  # Python template files, contains Jinja2 syntax.
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["regdesc"]
