[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
]

[project]
name = "regdesc"
version = "0.1.0"
description = "Pythonic hardware register descriptors."
readme = "README.md"
license = "GPL-3.0"
authors = [
  { name = "Etienne Wodey", email = "airwoodix@posteo.me" },
]
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "jinja2>=1",
]
scripts.regdesc-codegen = "regdesc.codegen.template:ep_codegen"
scripts.regdesc-gen-rs-pac = "regdesc.codegen.rust_dummy_pac:ep_rust_dummy_pac"
scripts.regdesc-serialize = "regdesc.codegen.ir:ep_emit_json"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
  "regdesc",
]

[tool.ruff]
target-version = "py38"
line-length = 100
extend-exclude = [
  "*.tpl.py", # Python template files, contains Jinja2 syntax.
]

[tool.rye]
managed = true
dev-dependencies = [
  "pyproject-fmt>=1.7.0",
  "ruff>=0.3.3",
  "typos>=1.22.8",
]
